--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,13 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1"
   },
