--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "install": "cd client && npm install",
-      "preinstall": "cd server && npm install",
-      "dev:client": "cd client && npm start",
-      "dev:server": "cd server && npm run dev",
-      "build": "cd client && npm run build",
-      "start": "cd server && npm start"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "install": "cd client && npm install",
+        "preinstall": "cd server && npm install",
+        "dev:client": "cd client && npm start",
+        "dev:server": "cd server && npm run dev",
+        "build": "cd client && npm run build",
+        "start": "cd server && npm start"
     },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/Nesssu/MyVinylCollection"
+        "type": "git",
+        "url": "https://github.com/Nesssu/MyVinylCollection"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/Nesssu/MyVinylCollection"
+        "url": "https://github.com/Nesssu/MyVinylCollection"
     },
-    "homepage": "https://github.com/Nesssu/MyVinylCollection"
-  }
+    "homepage": "https://github.com/Nesssu/MyVinylCollection",
+    "dependencies": {
+        "config": "^3.3.9"
+    }
+}
