The start of the overhaul!

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "core-js": "^3.37.0",
     "http-proxy-middleware": "^2.0.6",
+    "ldrs": "^1.0.1",
+    "node-sass": "^9.0.0",
     "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
