--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.28.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
